Update website and add installer

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
   <h1>Download Logica</h1>
   <ul>
-    <li><a href="/logica-installer.exe">Download for Windows</a></li>
+    <a href="logica-installer.exe" download>Download Logica Installer</a>
   </ul>
 </body>
 </html>
