--- a/index.html
+++ b/index.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Download Logica</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Logica Installer</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Download Logica</h1>
-  <ul>
-    <a href="logica-installer.exe" download>Download Logica Installer</a>
-  </ul>
+  <div class="header">
+    <h1>Welcome to Logica</h1>
+    <p>Your coding logic, supercharged.</p>
+  </div>
+
+  <div class="main">
+    <h2>Download the Installer</h2>
+    <a class="download-link" href="logica-installer.exe">Download Logica</a>
+  </div>
 </body>
 </html>
