--- a/download.html
+++ b/download.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Logica - Home</title>
+  <title>Logica - Download</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -17,13 +17,13 @@
   </nav>
 
   <div class="header">
-    <h1>Welcome to Logica</h1>
-    <p>Your coding logic, supercharged.</p>
+    <h1>Download Logica</h1>
+    <p>Start building logic-driven tools today.</p>
   </div>
 
   <div class="main">
-    <h2>What is Logica?</h2>
-    <p>Logica is a custom scripting language designed to empower creators and simplify logic-driven tasks. Whether you're building automations or making tools, Logica keeps it simple and powerful.</p>
+    <a class="download-link" href="logica-installer.exe">⬇️ Download Installer</a>
+    <p>Compatible with Windows. Mac and Linux coming soon.</p>
   </div>
 </body>
 </html>
