--- a/docs.html
+++ b/docs.html
@@ -25,8 +25,7 @@
     <h2>Basic Commands</h2>
     <ul>
       <li><strong>set name = "Alice"</strong> — Creates a constant</li>
-      <li><strong>calc age = 2 + 2</strong> — Does math like a variable</li>
-      <li><strong>console.message("Hello " + name)</strong> — Outputs messages</li>
+      <li><strong>send(`input here`)</strong> — Outputs messages</li>
       <li><strong>if { ... }</strong> / <strong>else { ... }</strong> — Control flow</li>
     </ul>
     <p>More coming soon!</p>
