--- a/docs.html
+++ b/docs.html
@@ -24,9 +24,8 @@
   <div class="main">
     <h2>Basic Commands</h2>
     <ul>
-      <li><strong>set name = "Alice"</strong> — Creates a constant</li>
-      <li><strong>send(`input here`)</strong> — Outputs messages</li>
-      <li><strong>if { ... }</strong> / <strong>else { ... }</strong> — Control flow</li>
+      <li><strong>set name = "Alice"</strong> — Creates variables</li>
+      <li><strong>send(`type of message`, `text` `+ optional variables`)</strong> — Outputs messages</li>
     </ul>
     <p>More coming soon!</p>
   </div>
