--- a/docs.html
+++ b/docs.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Logica - Docs</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
+
 <body>
   <nav class="navbar">
     <div class="navbar-left">Logica</div>
@@ -22,12 +24,17 @@
   </div>
 
   <div class="main">
-    <h2>Basic Commands</h2>
+    <h2>Basic Syntax</h2>
     <ul>
       <li><strong>set name = "Alice"</strong> — Creates variables</li>
       <li><strong>send(`type of message`, `text` `+ optional variables`)</strong> — Outputs messages</li>
     </ul>
-    <p>More coming soon!</p>
+    <h2>CLI Commands and Flags</h2>
+    <ul>
+      <li><strong>Logica --version</strong> — Shows the current version of the CLI and Language itself.</li>
+      <li> - Some other ways to check the versions are by using "-v" or "version"</li>
+    </ul>
   </div>
 </body>
+
 </html>
