--- a/docs.html
+++ b/docs.html
@@ -32,7 +32,7 @@
     <h2>CLI Commands and Flags</h2>
     <ul>
       <li><strong>Logica --version</strong> — Shows the current version of the CLI and Language itself.</li>
-      <li> - Some other ways to check the versions are by using "-v" or "version"</li>
+      <li>  <small>Some other ways to check the versions are by using "-v" or "version"</small></li>
     </ul>
   </div>
 </body>
